Added references to new publications

--- a/refs/References.bib
+++ b/refs/References.bib
@@ -243,3 +243,7 @@
  @inbook{leveson-1999, place={Reading, massachusetts}, title={Appendix A: Medical Devices: The Therac-25}, booktitle={Safeware: System Safety and Computers}, publisher={Addison-Wesley}, author={Leveson, Nancy G.}, year={1999}} 
 
  @misc{rose_1994, title={Fatal dose}, url={http://www.ccnr.org/fatal_dose.html}, journal={Fatal Dose - Radiation Deaths linked to AECL Computer Errors}, author={Rose, Barbara Wade}, year={1994}, month={Jun}}
+
+ @article{MacedoPilotTrial, title={Presurgical rehabilitation program for patients with symptomatic lumbar spinal stenosis: A pilot randomized controlled trial protocol}, volume={6}, DOI={10.1080/24740527.2022.2137009}, number={4}, journal={Canadian Journal of Pain}, author={Bakaa, Nora and Gross, Douglas P. and Carlesso, Lisa C. and MacDermid, Joy and Thomas, Kenneth and Slomp, Florence and Rushton, Alison and Miciak, Maxi and Smeets, Rob and Rampersaud, Raja and et al.}, year={2022}} 
+
+ @article{EMAValidationStudy, title={Ecological momentary assessment of Physical Activity: Validation Study}, volume={19}, DOI={10.2196/jmir.7602}, number={7}, journal={Journal of Medical Internet Research}, author={Knell, Gregory and Gabriel, Kelley Pettee and Businelle, Michael S and Shuval, Kerem and Wetter, David W and Kendzor, Darla E}, year={2017}} 
